@@ -59,6 +59,7 @@ import static org.hisp.dhis.common.IdentifiableProperty.UID;
 import static org.hisp.dhis.commons.collection.ListUtils.sort;
 import static org.hisp.dhis.feedback.ErrorCode.E7124;
 import static org.hisp.dhis.feedback.ErrorCode.E7143;
+import static org.hisp.dhis.feedback.ErrorCode.E7611;
 import static org.hisp.dhis.hibernate.HibernateProxyUtils.getRealClass;
 import static org.hisp.dhis.organisationunit.OrganisationUnit.KEY_DATASET;
 import static org.hisp.dhis.organisationunit.OrganisationUnit.KEY_LEVEL;
@@ -93,6 +94,7 @@ import org.hisp.dhis.common.DimensionalObject;
 import org.hisp.dhis.common.DisplayProperty;
 import org.hisp.dhis.common.IdScheme;
 import org.hisp.dhis.common.IdentifiableObjectManager;
+import org.hisp.dhis.common.IllegalQueryException;
 import org.hisp.dhis.dataelement.DataElementGroup;
 import org.hisp.dhis.i18n.I18n;
 import org.hisp.dhis.i18n.I18nFormat;
@@ -104,7 +106,6 @@ import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.period.DateField;
 import org.hisp.dhis.period.Period;
 import org.hisp.dhis.period.RelativePeriodEnum;
-import org.hisp.dhis.period.comparator.AscendingPeriodComparator;
 import org.hisp.dhis.security.acl.AclService;
 import org.hisp.dhis.setting.SystemSettingManager;
 import org.hisp.dhis.user.UserDetails;
@@ -196,15 +197,11 @@ public class DimensionalObjectProducer {
         systemSettingManager.getSystemSetting(
             ANALYTICS_FINANCIAL_YEAR_START, AnalyticsFinancialYearStartKey.class);
 
-    boolean containsRelativePeriods = false;
-
     for (String isoPeriod : items) {
       // Contains isoPeriod and timeField
       IsoPeriodHolder isoPeriodHolder = IsoPeriodHolder.of(isoPeriod);
 
       if (RelativePeriodEnum.contains(isoPeriodHolder.getIsoPeriod())) {
-        containsRelativePeriods = true;
-
         String dateField = isoPeriodHolder.getDateField();
         DateField dateAndField = new DateField(relativePeriodDate, dateField);
         addRelativePeriods(
@@ -221,11 +218,7 @@ public class DimensionalObjectProducer {
     }
 
     // Remove duplicates
-    periods = periods.stream().distinct().collect(toList());
-
-    if (containsRelativePeriods) {
-      periods.sort(new AscendingPeriodComparator());
-    }
+    periods = periods.stream().distinct().toList();
 
     overridePeriodAttributes(periods, getCalendar());
 
@@ -258,7 +251,9 @@ public class DimensionalObjectProducer {
       dimensionalKeywords.addKeyword(
           isoPeriodHolder.getIsoPeriod(), join(" - ", startDate, endDate));
       periods.add(periodToAdd);
+      return;
     }
+    throw new IllegalQueryException(E7611, isoPeriodHolder.getIsoPeriod());
   }
 
   /**
@@ -389,7 +384,7 @@ public class DimensionalObjectProducer {
           levels.stream()
               .map(organisationUnitService::getOrganisationUnitLevelByLevel)
               .filter(Objects::nonNull)
-              .collect(toList()));
+              .toList());
     }
 
     if (!groups.isEmpty()) {
@@ -403,7 +398,7 @@ public class DimensionalObjectProducer {
                           group.getUid(),
                           group.getCode(),
                           group.getDisplayProperty(displayProperty)))
-              .collect(toList()));
+              .toList());
     }
 
     // When levels / groups are present, OUs are considered boundaries
@@ -488,7 +483,7 @@ public class DimensionalObjectProducer {
 
     // Remove duplicates
 
-    return ous.stream().distinct().collect(toList());
+    return ous.stream().distinct().toList();
   }
 
   /**
@@ -576,6 +571,6 @@ public class DimensionalObjectProducer {
       UserDetails userDetails, DimensionalObject object) {
     return object.getItems().stream()
         .filter(o -> aclService.canDataOrMetadataRead(userDetails, o))
-        .collect(toList());
+        .toList();
   }
 }
